@@ -79,7 +79,6 @@ Gadu-Gadu:
 Future Plugins? :
 	ICQ through Oscar plugin (ICQ2000) (requires hacking libfaim :-/)
 		this would allow us to send SMS messages.
-	Hotline (Or is this a waste of time?.  Ill decide soon enough, heh)
 
 ----
 THE UIS:
