@@ -211,6 +211,7 @@ extern guint blist_options;
 #define OPT_BLIST_NO_BUTTONS		0x00000080
 #define OPT_BLIST_NO_MT_GRP		0x00000100
 #define OPT_BLIST_SHOW_WARN		0x00000200
+#define OPT_BLIST_GREY_IDLERS		0x00000400
 
 extern guint convo_options;
 #define OPT_CONVO_ENTER_SENDS		0x00000001
